Minor cleanup : todo: more cleanup?

--- a/Views/Frontpage/Index.cshtml
+++ b/Views/Frontpage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model WAF.Engine.Content.Homepage.Frontpage
+﻿@model WAF.Engine.Content.Homepage.Site.Frontpage
 @{
     ViewBag.Title = "Index";
 }
